Minor patches to man pages.

--- a/dynr-pbrouting/usr/share/man/man5/pbrouting.json.5
+++ b/dynr-pbrouting/usr/share/man/man5/pbrouting.json.5
@@ -1,4 +1,4 @@
-.Dd June 23, 2011
+.Dd Jan 26, 2012
 .Os LINUX 2.6
 .Dt PBROUTING.JSON 5 URM
 .Sh NAME
@@ -42,7 +42,7 @@ never be alocated to any system.
 .fi
 .Sh SEE ALSO
 .PP
-\fBdynr-pbrouting\fR(1) \fBdynr-web\fR(1) \fBdynr-dns\fR(1)
+\fBdynr-pbrouting\fR(8) \fBdynr-web\fR(8) \fBdynr-pbdns\fR(8) \fBdynr-nagios-test.py\fR(8)
 .Sh AUTHORS
 This manual page was written  by  Rob Meijer <rob@dnpa.nl>, for
 the GNU/Linux Ubuntu system
