--- a/dynr-pbrouting/usr/share/man/man8/dynr-pbrouting.8
+++ b/dynr-pbrouting/usr/share/man/man8/dynr-pbrouting.8
@@ -1,4 +1,4 @@
-.Dd June 23, 2011
+.Dd Jan 26, 2012
 .Os LINUX
 .Dt DYNR-PBROUTING  8 URM
 .Sh NAME
@@ -65,7 +65,7 @@ the author.
 .\" .Sh EXAMPLES
 .Sh SEE ALSO
 .PP
-\fBpbrouting.json\fR(5) \fBdynr-web\fR(1) \fBdynr-dns\fR(1) 
+\fBpbrouting.json\fR(5) \fBdynr-web\fR(8) \fBdynr-pbdns\fR(8) \fBdynr-nagios-test.py\fR(8) 
 .\" .Sh STANDARDS
 .Sh HISTORY
 This package is derived from the original (unpublished) dynrlite system.
